@@ -67,7 +67,9 @@ Free download from https://gstlearn.org
 --------------------------------------------------
 ```
 
-You may be interested in the citation file [gstlearn.bib](https://soft.mines-paristech.fr/cran/gstlearn.bib
+You may be interested in the citation file [gstlearn.bib](https://soft.mines-paristech.fr/cran/gstlearn.bib)
+
+Report a bug or contact us: [gstlearn@groupes.mines-paristech.fr](mailto:gstlearn@groupes.mines-paristech.fr)
 
 ## Requirements
 
