@@ -54,6 +54,7 @@ set(R_PACKAGE_SRC_FOLDER           ${R_PACKAGE_DESTINATION_FOLDER}/src)
 # Tell that we need to generate doxymentation before building python package
 #add_dependencies(python_doc doxygen)
 
+# TODO: r_build should call first r_swig (to be created) followed by r_doc (and then r_install)
 add_custom_target(r_doc
   COMMAND ${R_EXECUTABLE} CMD BATCH --no-echo --no-timing --no-save --no-restore ${CMAKE_CURRENT_SOURCE_DIR}/doc/create_doc.R
   COMMENT "Generating documentation for R package"
